--- a/html/clmnlist.html
+++ b/html/clmnlist.html
@@ -9,12 +9,13 @@
     <link rel="shortcut icon" href="http://img.cgv.co.kr/WebApp/images/common/favicon_cgv.png">
     <link rel="apple-touch-icon" sizes="114×114" href="http://img.cgv.co.kr/WebApp/images/common/favicon_cgv.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.5/css/swiper.min.css">
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
 
     <script type="application/javascript" src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script>
     <script type="application/javascript" src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script>
     <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+    <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.5/js/swiper.min.js"></script>
     <script type="text/babel" src="../js/common.js"></script>
     <script type="text/babel" src="../js/component.js"></script>
     <script type="text/babel" src="../js/clmnlist.js"></script>
@@ -22,9 +23,18 @@
 <body>
     <div id="wrap">
         <div id="msgBox" class="globalMsg"></div>
-        <div id="srchArea" class="search"></div>
-        <div id="gridArea" class="gridMain"></div>
-        <div id="editArea" class="editArea"></div>
+        <div id="naviArea" class="navi"></div>
+        <div class="swiper-container">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div id="srchArea" class="swiper-slide search"></div>
+                <div id="gridArea" class="swiper-slide gridMain"></div>
+                <div id="editArea" class="swiper-slide editArea"></div>
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+        </div>        
     </div>
 </body>
 
